--- a/docs/css/theme-custom.css
+++ b/docs/css/theme-custom.css
@@ -8,9 +8,10 @@
     --sidebar-name-font-family: 'Ultra', serif;
     --sidebar-name-font-size: 38px;
     --search-input-font-size: 16px; 
-    --theme-color: #FF2400;
+    --theme-color: #E34234;
 
     /* Headings */
+    --heading-color: #E34234;
     --heading-font-family: 'Ultra', serif;
     /* --heading-h1-font-size: var(--font-size-xxxl); */
     --heading-h1-font-weight: 400;
